Fix image alignment

--- a/styles.css
+++ b/styles.css
@@ -110,41 +110,34 @@ button {
     font-weight: 700;
     text-align: center;
     color: #1F2937;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
+    background-color: white;
 }
 
-.info-container {
+.outer {
     display: flex;
-    align-items: center;
+    column-gap: 10px;
+    align-items: flex-start;
     justify-content: center;
-    gap: 3%;
-    width: 70%;
-    margin-right: auto;
-    margin-left: auto;
+    background-color: white;
+    padding: 20px 100px 20px 100px;
+    width: 100%;
 }
 
-.info {
+.col {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 25%;
-    font-size: 20px;
-}
-
-.text {
+    flex-direction: column;
+    flex-basis: 200px;
     text-align: center;
-    font-size: 0.7em;
-    color: #1F2937;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
+    width: 25%;
 }
 
-img.info-pic {
-    border-radius: 25%;
+.col img {
     width: 100%;
     height: auto;
-    max-width: 200px;
-    margin-bottom: 20px;
+    border-radius: 25%;
+    padding-bottom: 10px;
 }
 
 .section3 {
